some styling fixes and disable background slide
- make the top padding unique to index to fix unwanted space in wave
  demo
- disable javascript that redraws background because it's slow and kinda
  dorky

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,11 +1,12 @@
 body {
-  padding-top: 30em;
+  padding-top: 5em;
   padding-bottom: 3em;
   background-image: url(../images/serratus_alpha_retro.jpg);
   background-repeat: no-repeat;
   background-position: 0px 0px;
   background-size: cover;
   background-color: #e5e5e5;
+  background-attachment: fixed;
 }
 
 .center {
@@ -33,7 +34,8 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: medium;
   padding: 2em;
-  box-shadow: 0px 0px 50px;
+  margin-top: 20em;
+  box-shadow: 0px 0px 12px;
 }
 
 /* .project-div {
